Fixed bug where the project image gallery was appearing on top of navigation header when scrolling down. Fixed this by setting the z-index of the project image gallery to -1.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -192,6 +192,7 @@ body {
     display: block;
     height: 500px;
     margin: auto;
+    z-index: -1;
 }
 
 .project-image-gallery-arrow-button {
